syntax = "proto3";

package users;

option go_package = "./";

service UserService {
    rpc CreateUser (NewUser) returns (User) {}
    rpc UserLogin (UserLoginRequest) returns (User) {}
    
}

message NewUser {
    string id = 1;
    string email = 2;
    string password = 3;
    string fullname = 4;
    string mobile = 5;
    string merchan_id = 6;
    UserType type_of_user = 7;
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}


message User {
    string id = 1;
    string email = 2;
    string fullname = 3;
    string mobile = 4;
    string school_code = 5;
    UserType type_of_user = 6;
    bool is_active = 7; 
    string created_at = 8;
    string modified_at = 9;
    string last_date_login = 10;
    string last_ip_login = 11;
}

message Empty {}

enum UserType {
    UNKNOWN_USER_TYPE = 0;
    GAWAIPOS = 1;
    MERCHANT = 2;
}